--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngrx/store-devtools": "^8.2.0",
     "core-js": "^2.5.4",
     "firebase": "^6.5.0",
+    "ngx-filter-pipe": "^2.1.2",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
