--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@ionic-native/barcode-scanner": "^5.13.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/geolocation": "^5.13.0",
+    "@ionic-native/qr-scanner": "^5.13.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
@@ -32,10 +34,12 @@
     "@ngrx/store-devtools": "^8.2.0",
     "cordova-android": "^8.0.0",
     "cordova-plugin-geolocation": "^4.0.2",
+    "cordova-plugin-qrscanner": "^3.0.1",
     "core-js": "^2.5.4",
     "firebase": "^6.5.0",
     "json-server": "^0.15.1",
     "ngx-filter-pipe": "^2.1.2",
+    "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -83,7 +87,11 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-qrscanner": {},
+      "phonegap-plugin-barcodescanner": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      }
     },
     "platforms": [
       "android"
