--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@ionic-native/barcode-scanner": "^5.13.0",
+    "@ionic-native/camera": "^5.14.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/geolocation": "^5.13.0",
     "@ionic-native/splash-screen": "^5.0.0",
@@ -33,6 +34,7 @@
     "@ngrx/store-devtools": "^8.2.0",
     "angular2-signaturepad": "^2.9.0",
     "cordova-android": "^8.0.0",
+    "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-geolocation": "^4.0.2",
     "core-js": "^2.5.4",
     "firebase": "^6.5.0",
@@ -88,6 +90,9 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "phonegap-plugin-barcodescanner": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
+      "cordova-plugin-camera": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       }
     },
