--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ngrx/store-devtools": "^8.2.0",
     "angular2-signaturepad": "^2.9.0",
     "cordova-android": "^8.0.0",
+    "cordova-browser": "6.0.0",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-geolocation": "^4.0.2",
     "core-js": "^2.5.4",
@@ -97,7 +98,8 @@
       }
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
