acertado tela solicitacao

--- a/angular.json
+++ b/angular.json
@@ -175,6 +175,9 @@
       }
     }
   },
+  "cli": {
+    "defaultCollection": "@ionic/angular-toolkit"
+  },
   "schematics": {
     "@ionic/angular-toolkit:component": {
       "styleext": "scss"
